[package]
name = "kanata_layer_observer"
description = "Observes kanata layer changes and runs a shell script"
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0"
authors = ["poo"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
simplelog = "0.12"
toml = "0.9"

